<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.flex</groupId>
  <artifactId>alto</artifactId>
  <version>0.5-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Alto J2EE Cloud Utilities</name>
  <properties>
    <spring.version>3.2.8.RELEASE</spring.version>
    <spring.security.version>3.1.3.RELEASE</spring.security.version>
    <hibernate.version>4.1.7.Final</hibernate.version>
  </properties>
  <scm>
    <connection>scm:git:https://github.com/alto-project/alto.git</connection>
    <developerConnection>scm:git:https://github.com/alto-project/alto.git</developerConnection>
    <url>http://github.com/alto-project/alto</url>
    <tag>HEAD</tag>
  </scm>
  <distributionManagement>
    <repository>
      <id>central</id>
      <name>FRS Release Repository</name>
      <url>https://dev.flexrentalsolutions.com/nexus/content/repositories/releases/</url>
    </repository>
    <snapshotRepository>
      <id>snapshots</id>
      <name>FRS Snapshot Repository</name>
      <url>https://dev.flexrentalsolutions.com/nexus/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>
  <dependencies>
    <dependency>
      <groupId>javax.servlet.jsp</groupId>
      <artifactId>jsp-api</artifactId>
      <version>2.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
		<groupId>net.jawr</groupId>
		<artifactId>jawr-bundle-processor</artifactId>
		<version>1.4.2</version>
		<exclusions>
	        <exclusion>
	          <artifactId>jawr</artifactId>
	          <groupId>net.jawr</groupId>
	        </exclusion>
      </exclusions>
      <scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>net.jawr</groupId>
		<artifactId>jawr-core</artifactId>
		<version>3.5.1</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>commons-lang</groupId>
		<artifactId>commons-lang</artifactId>
		<version>2.6</version>
	</dependency>	
	<dependency>
		<groupId>commons-discovery</groupId>
		<artifactId>commons-discovery</artifactId>
		<version>0.5</version>
	</dependency>
	<dependency>
		<groupId>org.apache.ddlutils</groupId>
		<artifactId>ddlutils</artifactId>
		<version>1.0</version>
		<scope>provided</scope>
		<exclusions>
			<exclusion>
				<groupId>xerces</groupId>
				<artifactId>xercesImpl</artifactId>
			</exclusion>
			<exclusion>
				<groupId>xml-apis</groupId>
				<artifactId>xml-apis</artifactId>
			</exclusion>		
		</exclusions>
	</dependency>
	<dependency>
		<groupId>commons-beanutils</groupId>
		<artifactId>commons-beanutils</artifactId>
		<version>1.8.3</version>
		<scope>provided</scope>
	</dependency>
    <dependency>
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <version>3.2</version>
      <scope>provided</scope>
    </dependency>   
	<dependency>
		<groupId>commons-codec</groupId>
		<artifactId>commons-codec</artifactId>
		<version>1.7</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
	  <groupId>org.springframework</groupId>
	  <artifactId>spring-web</artifactId>
	  <version>${spring.version}</version>
	  <scope>provided</scope>
	</dependency>
	<dependency>
	  <groupId>org.springframework</groupId>
	  <artifactId>spring-webmvc</artifactId>
	  <version>${spring.version}</version>
	  <scope>provided</scope>
	</dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-orm</artifactId>
      <version>${spring.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
		<groupId>org.springframework.security</groupId>
		<artifactId>spring-security-web</artifactId>
		<version>${spring.security.version}</version>
		<scope>provided</scope>
		<exclusions>
		        <exclusion>
		          	<groupId>org.springframework</groupId>
					<artifactId>spring-tx</artifactId>
		        </exclusion>
		        <exclusion>
		          	<groupId>org.springframework</groupId>
					<artifactId>spring-jdbc</artifactId>
		        </exclusion>
		        <exclusion>
		          	<groupId>org.springframework</groupId>
					<artifactId>spring-aop</artifactId>
		        </exclusion>
		        <exclusion>
		          	<groupId>org.springframework</groupId>
					<artifactId>spring-expression</artifactId>
		        </exclusion>
        </exclusions>
	</dependency>
	<dependency>
		<groupId>com.basho.riak</groupId>
		<artifactId>riak-client</artifactId>
		<version>1.4.4</version>
		<scope>provided</scope>
	</dependency>
    <dependency>
      <groupId>com.couchbase.client</groupId>
      <artifactId>couchbase-client</artifactId>
      <version>1.4.4</version>
      <scope>provided</scope>
    </dependency>
   	<dependency>
	  <groupId>org.springframework.amqp</groupId>
	  <artifactId>spring-rabbit</artifactId>
	  <version>1.3.0.RELEASE</version>
	  <scope>provided</scope>
	 	<exclusions>
		        <exclusion>
		          	<groupId>org.springframework</groupId>
					<artifactId>spring-tx</artifactId>
		        </exclusion>
		        <exclusion>
		          	<groupId>org.springframework</groupId>
					<artifactId>spring-asm</artifactId>
		        </exclusion>
		        <exclusion>
		          	<groupId>org.springframework</groupId>
					<artifactId>spring-core</artifactId>
		        </exclusion>
		        <exclusion>
		          	<groupId>com.rabbitmq</groupId>
					<artifactId>amqp-client</artifactId>
		        </exclusion>
        </exclusions>
	</dependency>	
	<dependency>
		<groupId>com.rabbitmq</groupId>
		<artifactId>amqp-client</artifactId>
		<version>3.2.4</version>
		<scope>provided</scope>
	</dependency>
    <dependency>
		<groupId>org.apache.velocity</groupId>
		<artifactId>velocity</artifactId>
		<version>1.7</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>c3p0</groupId>
		<artifactId>c3p0</artifactId>
		<version>0.9.1.2</version>
		<scope>provided</scope>
	</dependency>
	<!-- 
	<dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${hibernate.version}</version>
      <scope>provided</scope>
    </dependency>
    -->
    <!--  USING A FORK OF HIBERNATE UNTIL THEY FIX THE REGION FACTORY INJECTION ISSUE -->
    <dependency>
	 <groupId>com.frs</groupId>
	 <artifactId>hibernate-core</artifactId>
	 <version>4.1.10</version>
	 <scope>provided</scope>
  </dependency>
    <dependency>
		<groupId>org.hibernate</groupId>
		<artifactId>hibernate-ehcache</artifactId>
		<version>${hibernate.version}</version>
		<scope>provided</scope>
		<exclusions>
        <exclusion>
          <artifactId>hibernate-core</artifactId>
          <groupId>org.hibernate</groupId>
        </exclusion>
        </exclusions>
	</dependency>
    <dependency>
	    <groupId>com.google.code.simple-spring-memcached</groupId>
	    <artifactId>spymemcached</artifactId>
	    <version>2.8.4</version>
	    <scope>provided</scope>
	</dependency>
	<dependency>
	    <groupId>com.amazonaws</groupId>
	    <artifactId>aws-java-sdk</artifactId>
	    <version>1.3.27</version>
	    <scope>provided</scope>
		    <exclusions>
		        <exclusion>
		          	<groupId>commons-codec</groupId>
					<artifactId>commons-codec</artifactId>
		        </exclusion>
        </exclusions>
	</dependency>
	
	<dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.0.5</version>
      <scope>test</scope>
    </dependency>
    <dependency>
	  <groupId>org.springframework</groupId>
	  <artifactId>spring-test</artifactId>
	  <version>${spring.version}</version>
	  <scope>test</scope>
	</dependency>
	<dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>5.14.4</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <artifactId>junit</artifactId>
          <groupId>junit</groupId>
        </exclusion>
        <exclusion>
          <artifactId>guice</artifactId>
          <groupId>org.testng</groupId>
        </exclusion>
      </exclusions>
    </dependency>
	
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.1.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.8</version>
        <configuration>
          <downloadSources>true</downloadSources>
          <downloadJavadocs>false</downloadJavadocs>
          <useProjectReferences>false</useProjectReferences>
          <projectNameTemplate>[artifactId]-[version]</projectNameTemplate>
          <manifest>${basedir}/src/main/resources/META-INF/MANIFEST.MF</manifest>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.8</version>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>
   <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jaxb2-maven-plugin</artifactId>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <packageName>com.frs.alto.xml.bindings</packageName>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.5</version>
        <executions>
          <execution>
            <id>add-resource</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>add-resource</goal>
            </goals>
            <configuration>
              <resources>
                <resource>
                  <directory>src/main/xsd</directory>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
   </build>
   <profiles>
    <profile>
      <id>bamboo</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.8</version>
            <configuration>
              <skipTests>false</skipTests>
              <useSystemClassLoader>false</useSystemClassLoader>
              <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
